Fix dark mode issue with oembed twitter

--- a/styles/index.css
+++ b/styles/index.css
@@ -21,3 +21,8 @@ body {
 /* Stop purging. */
 
 /* Your own custom utilities */
+.twitter-video {
+  background: #fff;
+  border-radius: 1em;
+  padding: 1em;
+}
